--- a/MyWebApi/MyWebApi.csproj
+++ b/MyWebApi/MyWebApi.csproj
@@ -4,14 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
-	  <PackageReference Include="System.Text.Json" Version="8.0.0" />
+	  <PackageReference Include="System.Text.Json" Version="8.0.4" />
 	  <PackageReference Include="Elsa" Version="3.2.2" />
-	  <PackageReference Include="MessagePack" Version="2.0.323" />
+	  <PackageReference Include="MessagePack" Version="2.5.187" />
+	  <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
